<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197"
        android:textSize="100sp"
        android:text="@string/time_separator"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/num1"
        android:layout_width="60sp"
        android:layout_height="100sp"
        app:layout_constraintEnd_toStartOf="@+id/num2"
        app:layout_constraintTop_toTopOf="@+id/num2"
        app:layout_constraintBottom_toBottomOf="@+id/num2"
        android:textSize="90sp"
        android:text="@string/num1"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/num2"
        android:layout_width="60sp"
        android:layout_height="100sp"
        app:layout_constraintEnd_toStartOf="@+id/separator"
        app:layout_constraintTop_toTopOf="@+id/separator"
        app:layout_constraintBottom_toBottomOf="@+id/separator"
        android:textSize="90sp"
        android:text="@string/num2"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/num3"
        android:layout_width="60sp"
        android:layout_height="100sp"
        app:layout_constraintStart_toEndOf="@+id/separator"
        app:layout_constraintTop_toTopOf="@+id/separator"
        app:layout_constraintBottom_toBottomOf="@+id/separator"
        android:textSize="90sp"
        android:text="@string/num3"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/num4"
        android:layout_width="60sp"
        android:layout_height="100sp"
        app:layout_constraintStart_toEndOf="@+id/num3"
        app:layout_constraintTop_toTopOf="@+id/num3"
        app:layout_constraintBottom_toBottomOf="@+id/num3"
        android:textSize="90sp"
        android:text="@string/num4"
        android:gravity="center"
        />


    <Button
        android:id="@+id/start"
        android:layout_width="120sp"
        android:layout_height="60sp"
        android:layout_marginTop="344dp"
        app:layout_constraintEnd_toEndOf="@+id/separator"
        app:layout_constraintStart_toStartOf="@+id/separator"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        android:text="@string/start"

        android:onClick="startCounter"
        />

    <Button
        android:id="@+id/stop"
        android:layout_width="120sp"
        android:layout_height="60sp"
        android:layout_marginEnd="8dp"
        android:text="@string/stop"
        app:layout_constraintEnd_toStartOf="@+id/start"
        app:layout_constraintTop_toTopOf="@+id/start" />

    <Button
        android:id="@+id/reset"
        android:layout_width="120sp"
        android:layout_height="60sp"
        android:layout_marginStart="8dp"
        android:text="@string/reset"
        app:layout_constraintStart_toEndOf="@+id/start"
        app:layout_constraintTop_toTopOf="@+id/start" />

    <!--    <Button-->
<!--        android:id="@+id/button1"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/button1_text"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/textView1"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        />-->


</androidx.constraintlayout.widget.ConstraintLayout>